--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,6 +15,10 @@ node-api = ["napi", "napi-derive"]
 [dependencies]
 parcel_sourcemap = { git = "https://github.com/speedy-js/parcel-source-map", branch = "speedy" }
 rayon = "1.5.1"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+rkyv = "0.7"
+base64 = "0.13"
 
 [dependencies.napi]
 optional = true
