--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -15,6 +15,7 @@ napi = {version = "2.0.1", features = ["napi3", "serde-json"]}
 napi-derive = "2.0.1"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
+speedy_sourcemap = {path = "../core", features = ["node-api"]}
 
 [target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
 mimalloc = {version = "0.1"}
