--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -16,6 +16,7 @@ napi-derive = "2.0.1"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 speedy_sourcemap = {path = "../core", features = ["node-api"]}
+rayon = "1.5.1"
 
 [target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
 mimalloc = {version = "0.1"}
