--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bench": "node -r @swc-node/register benchmark/bench.ts",
     "build": "pnpm build --dir node",
     "format": "prettier . -w",
-    "test": "mocha -r @swc-node/register **/tests/**/*.spec.ts"
+    "test": "mocha -r @swc-node/register **/__tests__/**/*.spec.ts"
   },
   "devDependencies": {
     "@napi-rs/cli": "^2.0.0",
@@ -34,7 +34,6 @@
     "mocha": "^9.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
-    "source-map": "0.6.1",
     "typescript": "^4.4.4"
   },
   "prettier": {
@@ -44,15 +43,8 @@
     "trailingComma": "all",
     "arrowParens": "always"
   },
-  "ava": {
-    "extensions": [
-      "ts"
-    ],
-    "require": [
-      "@swc-node/register"
-    ],
-    "files": [
-      "**/*.spec.ts"
-    ]
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   }
 }
