perf(core): optimize data cloning

--- a/.github/workflows/Bench.yaml
+++ b/.github/workflows/Bench.yaml
@@ -69,3 +69,4 @@ jobs:
           output-file-path: output.txt
           auto-push: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          comment-always: true
