--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,7 +13,7 @@ version = "0.0.1"
 node-api = ["napi", "napi-derive"]
 
 [dependencies]
-parcel_sourcemap = { git = "https://github.com/speedy-js/parcel-source-map", branch = "speedy" }
+parcel_sourcemap = { git = "https://github.com/speedy-js/parcel-source-map", branch = "speedy", features = ["native"] }
 rayon = "1.5.1"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
