--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -439,7 +439,7 @@ jobs:
         run: |
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
           cd node
-          npm publish --access public
+          pnpm publish
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
