chore: add toComment bench

--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@speedy-js/parcel-source-map": "^2.0.1",
     "benchmark": "^2.1.4",
+    "convert-source-map": "^1.8.0",
     "merge-source-map": "^1.1.0",
     "terser": "^5.10.0"
   },
   "devDependencies": {
     "@ampproject/remapping": "^1.0.2",
-    "@types/benchmark": "^2.1.1"
+    "@types/benchmark": "^2.1.1",
+    "@types/convert-source-map": "^1.5.2"
   }
 }
