--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -170,7 +170,55 @@ jobs:
         with:
           name: bindings-${{ matrix.settings.target }}
           path: node/${{ env.APP_NAME }}.*.node
-
+  build-freebsd:
+    runs-on: macos-10.15
+    name: Build FreeBSD
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build
+        id: build
+        uses: vmactions/freebsd-vm@v0.1.5
+        env:
+          DEBUG: napi:*
+          RUSTUP_HOME: /usr/local/rustup
+          CARGO_HOME: /usr/local/cargo
+          RUSTUP_IO_THREADS: 1
+        with:
+          envs: DEBUG RUSTUP_HOME CARGO_HOME RUSTUP_IO_THREADS
+          usesh: true
+          mem: 3000
+          prepare: |
+            pkg install -y curl node14 python2
+            curl -qL https://www.npmjs.com/install.sh | sh
+            npm install -g pnpm
+            curl https://sh.rustup.rs -sSf --output rustup.sh
+            sh rustup.sh -y --profile minimal --default-toolchain stable
+            export PATH="/usr/local/cargo/bin:$PATH"
+            echo "~~~~ rustc --version ~~~~"
+            rustc --version
+            echo "~~~~ node -v ~~~~"
+            node -v
+            echo "~~~~ pnpm --version ~~~~"
+            pnpm -v
+          run: |
+            export PATH="/usr/local/cargo/bin:$PATH"
+            pwd
+            ls -lah
+            whoami
+            env
+            freebsd-version
+            pnpm install --frozen-lockfile
+            pnpm build
+            strip -x node/*.node
+            pnpm test
+            rm -rf node_modules
+            rm -rf target
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: bindings-freebsd
+          path: node/${{ env.APP_NAME }}.*.node
+          if-no-files-found: error
   test-macOS-windows-binding:
     name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
     needs:
@@ -394,6 +442,7 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     needs:
+      - build-freebsd
       - test-linux-x64-gnu-binding
       - test-linux-x64-musl-binding
       - test-linux-aarch64-gnu-binding
